#86: add todo for holidays, make sure users work at least half their working time per month (better for optimization)